tests/snapshots/front_page_tests__ast_conversion_result.snap
---
source: tests/front_page_tests.rs
expression: content_blocks
---
[
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Today's World: ",
          "formatting": {
            "bold": true,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "Technology and global health developments dominate today's news landscape",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Technology News",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Major tech company reveals revolutionary AI system with unprecedented capabilities that could affect millions of jobs across multiple industries.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 3,
      "content": {
        "spans": [
          {
            "text": "Key Stories",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "AI Breakthrough Announced",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Political News",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "International trade deal faces resistance from unions and environmental groups with policy decisions that may impact three continents.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 3,
      "content": {
        "spans": [
          {
            "text": "Key Stories",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "Trade Agreement Opposition",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Looking Ahead",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "These developments reflect broader tensions between technological advancement and social stability",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  }
]
