tests/snapshots/front_page_tests__generator_creation_results.snap
---
source: tests/front_page_tests.rs
expression: results
---
{
  "anthropic_success": true,
  "ollama_success": true
}
