tests/snapshots/front_page_tests__json_parsing_result.snap
---
source: tests/front_page_tests.rs
expression: result
---
{
  "theme": "Global tensions rise amid technological breakthroughs",
  "stories": [
    {
      "title": "Tech Innovation Surge",
      "summary": "Multiple companies unveil groundbreaking technologies this week.",
      "impact": "Market disruption expected across sectors"
    },
    {
      "title": "Climate Policy Changes",
      "summary": "New international agreements target emissions reduction.",
      "impact": "Industries must adapt within two years"
    }
  ],
  "context": "These changes signal a shift toward sustainable technology adoption"
}
