tests/snapshots/front_page_tests__structured_front_page_blocks.snap
---
source: tests/front_page_tests.rs
expression: front_page_blocks
---
[
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Today's World: ",
          "formatting": {
            "bold": true,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "Significant developments are unfolding across technology, politics, and global health, indicating a period of potential change and debate in these key sectors.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Technology News",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Technology News focuses on a major AI breakthrough announced by a leading tech company. Coverage centers on the potential implications of this technology, though user reaction data is currently unavailable to gauge public sentiment. The source highlights the innovative aspects of this development.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 3,
      "content": {
        "spans": [
          {
            "text": "Key Stories",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "Major Tech Company Announces Revolutionary AI Breakthrough",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Political News",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Political News reports on opposition to a new international trade agreement. The coverage emphasizes the political challenges and potential roadblocks facing the agreement, with no user reaction data available to assess public opinion. The source frames this as a significant point of contention in global politics.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 3,
      "content": {
        "spans": [
          {
            "text": "Key Stories",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "International Trade Agreement Faces Opposition",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Health News",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Health News details new guidelines issued by the Global Health Organization. The source presents these guidelines as a critical update in health protocols, but lacks user comment data to determine public reception. Coverage appears focused on the practical implications of these new recommendations.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 3,
      "content": {
        "spans": [
          {
            "text": "Key Stories",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "Global Health Organization Issues New Guidelines",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  },
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Looking Ahead",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  },
  {
    "Paragraph": {
      "spans": [
        {
          "text": "These stories suggest a day of important announcements and potential shifts in technology, international relations, and public health, all areas likely to be subject to further scrutiny and debate.",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  }
]
