tests/snapshots/front_page_tests__structured_front_page_unavailable.snap
---
source: tests/front_page_tests.rs
expression: "\"Ollama server not available for structured front page test\""
---
Ollama server not available for structured front page test
