tests/snapshots/front_page_tests__structured_prompt_template.snap
---
source: tests/front_page_tests.rs
expression: normalized_prompt
---
You are a senior news editor creating a structured "Front Page" summary from daily news feeds. 

Analyze the provided content and return a JSON response with this exact structure:

{
  "theme": "One sentence capturing the day's most significant theme or development",
  "stories": [
    {
      "title": "Clear, descriptive headline",
      "summary": "1-2 sentences explaining what happened and why it matters",
      "impact": "Brief note on who is affected or what comes next"
    }
  ],
  "context": "Optional sentence connecting stories to broader trends"
}

Guidelines:
- Identify 3-5 most important stories
- Prioritize breaking news, high impact, and controversial stories
- Keep summaries concise but informative
- Maintain neutral tone
- Focus on stories affecting large populations or having long-term implications

Daily feed content:
[TEST_CONTENT_PLACEHOLDER]

Return only valid JSON with the structure above.
