tests/snapshots/front_page_tests__wrapped_json_parsing_result.snap
---
source: tests/front_page_tests.rs
expression: result
---
{
  "theme": "Technology regulation and AI advancement dominate headlines as governments impose new controls while companies push boundaries.",
  "sources": [
    {
      "name": "Health News",
      "summary": "The Trump administration is reportedly limiting the CDC's flagship health journal, raising concerns about scientific communication during public health crises.",
      "key_stories": [
        "Trump Administration Restricts CDC Health Publications"
      ]
    },
    {
      "name": "Technology Policy News",
      "summary": "Around 6,000 porn sites in the UK have begun requiring age verification, with VPNs topping download charts as users seek to bypass restrictions.",
      "key_stories": [
        "UK Implements Age Verification for Pornography Sites"
      ]
    }
  ],
  "context": "These developments reflect growing tensions between technological innovation and regulatory control, with governments worldwide struggling to balance innovation with public safety and democratic values."
}
